<resources>

    <string name="app_name">Quizz</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_listfile">List of Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="way1">way1</string>
    <string name="way2">way2</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="my_exam">My Exam</string>
    <string name="practice">Ôn thi</string>
    <string name="exam">Thi thử</string>
    <string name="title_activity_exam">ExamActivity</string>
    <string name="exam_type">Lựa chọn hình thức thi</string>
    <string name="exam_time">Thời gian</string>
    <string name="exam_subject">Bộ đề</string>
    <string name="cancel_exam">Hủy</string>
    <string name="start_exam">Bắt đầu</string>
    <string name="exam_subject_title">Bạn đang thi môn : </string>
    <string name="exam_subject_title_value">" "</string>
    <string name="retry">Làm lại</string>
    <string name="check_mark">Chấm điểm</string>
    <string name="exam_time_title">Thời gian : </string>
    <string name="exam_time_title_value">" "</string>
    <string name="exam_question_value">"Câu x : "</string>

</resources>